# Blending-Surface-Quality

./: README.md
pcl_plane_fit/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  extract_plane  package.xml
pcl_plane_fit/catkin_generated/: generate_cached_setup.py  setup_cached.sh
pcl_plane_fit/devel/: .catkin  .rosinstall  setup.sh
pcl_plane_fit/gtest/: CTestTestfile.cmake  Makefile
pcl_plane_fit/src/: extract_plane.cpp
using_pointclouds/: CMakeCache.txt  CMakeLists.txt  CMakeListsforcsvpc2.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  extract_indices  package.xml  publish_pointcloud
using_pointclouds/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
using_pointclouds/catkin_generated/installspace/: using_pointclouds.pc  using_pointcloudsConfig.cmake
using_pointclouds/catkin_generated/stamps/using_pointclouds/: _setup_util.py.stamp
using_pointclouds/devel/: .catkin  .rosinstall  setup.sh
using_pointclouds/devel/lib/pkgconfig/: using_pointclouds.pc
using_pointclouds/devel/lib/using_pointclouds/: csvtopc2
using_pointclouds/devel/share/using_pointclouds/cmake/: using_pointcloudsConfig.cmake
using_pointclouds/gtest/: CTestTestfile.cmake  Makefile
using_pointclouds/src/: DeadCode  publish_pointcloud.cpp
